--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.AgroGidas"
         tools:targetApi="31">
         <activity
+            android:name=".Kontakt"
+            android:exported="true" />
+
+        <activity
             android:name=".loginActivity"
             android:exported="true" />
         <activity
