--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             android:name=".loginActivity"
             android:exported="true" />
         <activity
+            android:name=".Account"
+            android:exported="true" />
+        <activity
             android:name=".signupActivity"
             android:exported="true" />
         <activity
