--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,27 @@
         android:theme="@style/Theme.AgroGidas"
         tools:targetApi="31">
         <activity
+            android:name=".filters.KederisFilter"
+            android:exported="false" />
+        <activity
+            android:name=".filters.ClasModels"
+            android:exported="false" />
+        <activity
+            android:name=".filters.NewHollandModels"
+            android:exported="false" />
+        <activity
+            android:name=".filters.NivaModels"
+            android:exported="false" />
+        <activity
+            android:name=".filters.JohnModels"
+            android:exported="false" />
+        <activity
+            android:name=".filters.MarkeFilter"
+            android:exported="false" />
+        <activity
+            android:name=".PosterActivity"
+            android:exported="false" />
+        <activity
             android:name=".Kontakt"
             android:exported="true" />
         <activity
