--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,14 @@
         android:theme="@style/Theme.AgroGidas"
         tools:targetApi="31">
         <activity
+            android:name=".short_ad_activity"
+            android:exported="true" />
+        <activity
             android:name=".ChangePassword"
             android:exported="false" />
         <activity
             android:name=".short_ad"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".filters.KederisFilter"
             android:exported="false" />
@@ -60,7 +63,6 @@
             android:theme="@style/Theme.AgroGidas.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
