--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.AgroGidas"
         tools:targetApi="31">
         <activity
+            android:name=".ChangeEmail"
+            android:exported="false" />
+        <activity
             android:name=".full_ad"
             android:exported="true" />
         <activity
@@ -45,6 +48,7 @@
             android:theme="@style/Theme.AgroGidas.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
