--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.10.2'
+    implementation 'org.mindrot:jbcrypt:0.4'
 
 }
